# ek-tm4c123gxl-projects

./: .gitignore  README.md
GPIO_switch_LED/: main.c  ports.h
Keil/: README.md  readme.txt
Keil/GPIO_switch_LED/: main.c  ports.h  readme.txt
Keil/adc_temperature_measurement/: main.c
Keil/adc_voltage_measurement/: adcvoltage.h
Keil/external_reset/: readme.txt  reset.h
Keil/freq_division/: readme.txt
Keil/generate_custom_delay/: config.txt  readme.txt
Keil/generate_signal/: readme.txt  signal.c
Keil/gptm_demo/: demo.h  main.c  readme.txt
Keil/pwm_LED_fading/: main.c  readme.txt
Keil/pwm_example/: pwm_constants.h
Keil/reset_indicator/: header.h
Keil/rgb_colors/: config.txt  main.c  readme.txt  rgb.h
Keil/rgb_pattern/: config.txt  (+2 more)
VSCode/: .gitignore  README.md  config.txt  readme.txt  run_project.sh
VSCode/blinky/: CMakeLists.txt  readme.txt
VSCode/blinky/cmake/: tm4c_toolchain.cmake
VSCode/blinky/inc/: blinky_RGB.h
VSCode/blinky/src/: blinky_RGB.c
adc_temperature_measurement/: adctemperature.h  main.c  readme.txt
adc_voltage_measurement/: adcvoltage.h  main.c  readme.txt
external_reset/: main.c  reset.h
freq_division/: constants.h  main.c
generate_delay/: generatedelay.h  main.c  readme.txt  timer.c
generate_signal/: main.c  signal.c  signal.h
pwm_LED_fading/: main.c  pwm_constants.h
pwm_example/: main.c  readme.txt
reset_indicator/: main.c  readme.txt
rgb_pattern/: pattern.h
switch_portf/: switch.h
switch_toggle/: main.c  readme.txt
systick_demo/: demo.h  readme.txt
watchdog_test/: readme.txt  watchdog.h
(+117 files in other folders)
